--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 /**
  * Theme Name:       Mai Influence
- * Theme URI:        https://bizbudding.com/templates/mai-influence/
+ * Theme URI:        https://bizbudding.com/mai-theme/
  * Description:      Mai Influence child theme for the Genesis Framework.
  * Author:           BizBudding
  * Author URI:       https://bizbudding.com/
  * Version:          2.0.0
  * Text Domain:      mai-influence
  * Template:         genesis
- * Template Version: 3.3.4
+ * Template Version: 3.3.5
  * License:          GPL-2.0-or-later
  * License URI:      http://www.gnu.org/licenses/gpl-2.0.html
  */
